# EgyptianAgent

./: ARCHITECTURE.md  BUILD_HELP.md  BUILD_ISSUES_RESOLUTION.md  CMakeLists.txt  COMPLETE_IMPLEMENTATION.md  DEPLOYMENT_DISTRIBUTION_STRATEGY.md  DOCUMENTATION.md  ERROR_HANDLING_SAFETY.md  FINAL_CHECKLIST.md  FINAL_VERIFICATION_REPORT.md  FULL_IMPLEMENTATION_PLAN.md  GITHUB_LABELS.md  GITHUB_PROJECT_IMPLEMENTATION_SUMMARY.md  GITHUB_PROJECT_STRUCTURE.md  IMPLEMENTATION_SUMMARY.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PRODUCTION_OPERATIONS.md  PRODUCTION_READINESS_CHECKLIST.md  PROJECT_COMPLETION_SUMMARY.md  PROJECT_SUMMARY.md  README.md  RELEASE_NOTES.md  SECURITY.md  SECURITY_PRIVACY_MEASURES.md  TESTING_FRAMEWORK.md  TestImplementation.java  USER_MANUAL_AR.md  build.gradle  build.sh  build_production.sh  deploy_production.sh  gradle.properties  gradlew  gradlew.bat  implementation_plan2.md  initialize_submodules.sh  local.properties  settings.gradle  update_plan.md  verify_implementation.java  (+1 more)
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/libs/: vosk-android-0.3.44.aar
app/src/main/: AndroidManifest.xml
app/src/main/assets/: grammar.jsgf  optimize_assets.sh
app/src/main/assets/model/: llama-3.2-3b-Q4_K_M.gguf  placeholder
app/src/main/assets/model/egyptian_senior/: placeholder.txt
app/src/main/assets/model/openphone-3b/: .gitkeep  model.pt
app/src/main/assets/models/whisper-egy/: README.md
app/src/main/assets/wake_word_model/: placeholder
app/src/main/cpp/: llama_native.cpp  whisper_native.cpp
app/src/main/java/ai/openphone/: OpenPhone.java  OpenPhoneConfig.java  OpenPhoneResult.java
app/src/main/java/com/egyptian/agent/: BuildConfig.java
app/src/main/java/com/egyptian/agent/accessibility/: .gitkeep  FallDetectionService.java  FallDetector.java  MedicationReceiver.java  MedicationReminder.java  MedicationScheduler.java  SeniorMode.java  SeniorModeConfig.java  SeniorModeManager.java
app/src/main/java/com/egyptian/agent/ai/: EgyptianWhisperASR.java  LlamaIntentEngine.java
app/src/main/java/com/egyptian/agent/analytics/: PrivacyCompliantAnalytics.java
app/src/main/java/com/egyptian/agent/backup/: BackupRestoreManager.java
app/src/main/java/com/egyptian/agent/core/: .gitkeep  BackgroundTaskManager.java  CacheManager.java  ContextMemory.java  DeviceClassDetector.java  ForegroundServiceDelegate.java  Gemma2NLUProcessor.java  IntentRouter.java  IntentType.java  MainApplication.java  ModelManager.java  NNAPIDelegator.java  OfflineGrammarProcessor.java  OpenPhoneModel.java  PerformanceTester.java  PiperTTSEngine.java  PocketSphinxWakeWordDetector.java  Quantum.java  TTSEngine.java  TTSEngineInterface.java  TTSManager.java  VibrationManager.java  VoiceService.java  WakeWordDetector.java  WhisperASREngine.java
app/src/main/java/com/egyptian/agent/executors/: .gitkeep  AlarmExecutor.java  AlarmReceiver.java  AppExecutor.java  CallExecutor.java  CallLogExecutor.java  ContactsExecutor.java  EmergencyFollowupReceiver.java  EmergencyFollowupWorker.java  EmergencyHandler.java  EmergencyHandlerInterface.java  GuardianNotificationSystem.java  MediaExecutor.java  SmsExecutor.java  SystemSettingsExecutor.java  TimeExecutor.java  WhatsAppExecutor.java
app/src/main/java/com/egyptian/agent/feedback/: UserFeedbackSystem.java
app/src/main/java/com/egyptian/agent/hybrid/: .gitkeep  CloudFallback.java  EgyptianDialectAccuracyTester.java  EgyptianDialectTest.java  HybridASR.java  HybridASRTest.java  HybridOrchestrator.java  IntegrationTestActivity.java  LiveTranscribeEngine.java  LlamaModelIntegration.java  LlamaModelTesterActivity.java  LlamaNative.java  ModelLoadingService.java  ModelManager.java  OpenPhoneIntegration.java  OpenPhoneModel.java  WhisperEngine.java
app/src/main/java/com/egyptian/agent/nlp/: IntentResult.java  IntentRouter.java  IntentType.java
app/src/main/java/com/egyptian/agent/performance/: HonorX6cPerformanceOptimizer.java  PerformanceMonitor.java
app/src/main/java/com/egyptian/agent/receivers/: .gitkeep  AdminReceiver.java  AlarmReceiver.java  BootReceiver.java  VolumeButtonReceiver.java
app/src/main/java/com/egyptian/agent/security/: DataEncryptionManager.java  SecurityHardener.java
app/src/main/java/com/egyptian/agent/stt/: .gitkeep  EgyptianNormalizer.java  VocabularyManager.java  VoskSTTEngine.java
app/src/main/java/com/egyptian/agent/system/: SystemPrivilegeManager.java
app/src/main/java/com/egyptian/agent/test/: EgyptianAgentTester.java  EgyptianDialectTestSuite.java
app/src/main/java/com/egyptian/agent/testing/: AutomatedTestSuite.java
app/src/main/java/com/egyptian/agent/ui/: MainActivity.java
app/src/main/java/com/egyptian/agent/updates/: SecureOTAUpdater.java
app/src/main/java/com/egyptian/agent/utils/: .gitkeep  ButtonManager.java  ContactCache.java  CrashLogger.java  DeviceClassDetector.java  ErrorHandler.java  LocationService.java  LocationServiceInterface.java  MemoryOptimizer.java  PreferencesHelper.java  SensorManager.java  SpeechConfirmation.java  SystemAppHelper.java  TelephonyService.java  TelephonyServiceInterface.java  VibrationManager.java  WhatsAppService.java  WhatsAppServiceInterface.java
app/src/main/java/com/saiy/android/configuration/: EgyptianConfiguration.java
app/src/main/java/com/saiy/android/core/: Quantum.java
app/src/main/java/com/saiy/android/service/: SelfAwareService.java
app/src/main/res/drawable/: .gitkeep
app/src/main/res/layout/: .gitkeep  activity_integration_test.xml  activity_llama_tester.xml  activity_main.xml
app/src/main/res/raw/: emergency_alert
app/src/main/res/values/: .gitkeep  colors.xml  strings.xml
app/src/main/res/xml/: device_admin.xml
app/src/test/java/com/egyptian/agent/: CallExecutorTest.java  EgyptianNormalizerTest.java  IntentRouterTest.java  SeniorModeTest.java  TTSManagerTest.java
app/src/test/java/com/egyptian/agent/system/: SystemPrivilegeManagerTest.java
app/src/test/java/com/egyptian/agent/test/: ProductionComponentsTest.java
app/src/test/java/com/saiy/android/test/: SaiyPSIntegrationTest.java
documentation/: installation_guide.md  (+9 more)
(+38 files in other folders)
